add new enpoint auth/update-profile and auth/update-password
